tests/miniJava/neg/006814_mutation.MiniJava
class new java { public static void Main ( String [ ] java ) { { } } }
